--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = { version = "1.0.79" }
 clap = { version = "4.0", features = ["derive"] }
 regex = { version = "1.10.2" }
 walkdir = { version = "2.4.0" }
+rayon = { version = "1.8.0" }
